@@ -1,32 +1,35 @@
 package cgeo.contacts;
 
+import cgeo.contacts.permission.PermissionHandler;
+
 import android.app.Activity;
 import android.app.AlertDialog;
-import android.content.DialogInterface;
-import android.content.DialogInterface.OnCancelListener;
-import android.content.DialogInterface.OnClickListener;
 import android.content.Intent;
+import android.content.pm.PackageManager;
 import android.database.Cursor;
 import android.net.Uri;
 import android.os.Bundle;
 import android.provider.BaseColumns;
 import android.provider.ContactsContract;
-import android.support.annotation.NonNull;
 import android.util.Log;
 import android.util.Pair;
 import android.view.Gravity;
 import android.widget.Toast;
 
-import org.apache.commons.lang3.CharEncoding;
-import org.apache.commons.lang3.StringUtils;
+import androidx.annotation.NonNull;
 
 import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
 
+import org.apache.commons.lang3.StringUtils;
+
 public final class ContactsActivity extends Activity {
     static final String LOG_TAG = "cgeo.contacts";
+
+    private String nickName;
 
     @Override
     public void onCreate(final Bundle savedInstanceState) {
@@ -38,12 +41,31 @@ public final class ContactsActivity extends Activity {
             return;
         }
 
-        final String nickName = getParameter(uri, IContacts.PARAM_NAME);
+        nickName = getParameter(uri, IContacts.PARAM_NAME);
         if (StringUtils.isEmpty(nickName)) {
             finish();
             return;
         }
 
+        final boolean hasPermission = PermissionHandler.requestContactsPermission(this);
+        if (hasPermission) {
+            searchUser();
+        }
+        // else -> onRequestPermissionsResult()
+    }
+
+    @Override
+    public void onRequestPermissionsResult(final int requestCode, @NonNull final String[] permissions, @NonNull final int[] grantResults) {
+        if (grantResults.length > 0) {
+            if (grantResults[0] == PackageManager.PERMISSION_GRANTED) {
+                searchUser();
+            } else if (grantResults[0] == PackageManager.PERMISSION_DENIED) {
+                PermissionHandler.askAgainFor(this, requestCode);
+            }
+        }
+    }
+
+    public void searchUser() {
         // search by nickname, exact
         List<Pair<Integer, String>> contacts = getContacts(nickName, ContactsContract.Data.CONTENT_URI, ContactsContract.Data.CONTACT_ID, ContactsContract.CommonDataKinds.Nickname.NAME, false);
 
@@ -77,25 +99,17 @@ public final class ContactsActivity extends Activity {
         for (final Pair<Integer, String> p : contacts) {
             list.add(p.second);
         }
-        final CharSequence[] items = list.toArray(new CharSequence[list.size()]);
+        final CharSequence[] items = list.toArray(new CharSequence[0]);
         new AlertDialog.Builder(this)
                 .setTitle(R.string.multiple_matches)
-                .setItems(items, new OnClickListener() {
-
-                    @Override
-                    public void onClick(final DialogInterface dialog, final int which) {
-                        final int contactId = contacts.get(which).first;
-                        dialog.dismiss();
-                        openContactAndFinish(contactId);
-                    }
+                .setItems(items, (dialog, which) -> {
+                    final int contactId = contacts.get(which).first;
+                    dialog.dismiss();
+                    openContactAndFinish(contactId);
                 })
-                .setOnCancelListener(new OnCancelListener() {
-
-                    @Override
-                    public void onCancel(final DialogInterface dialog) {
-                        dialog.dismiss();
-                        finish();
-                    }
+                .setOnCancelListener(dialog -> {
+                    dialog.dismiss();
+                    finish();
                 })
                 .create().show();
     }
@@ -113,11 +127,9 @@ public final class ContactsActivity extends Activity {
         final String[] projection = { idColumnName, selectionColumnName, ContactsContract.Contacts.DISPLAY_NAME };
         final String selection = selectionColumnName + (like ? " LIKE" : " =") + " ? COLLATE NOCASE";
         final String[] selectionArgs = { like ? "%" + searchName + "%" : searchName };
-        Cursor cursor = null;
 
         final List<Pair<Integer, String>> result = new ArrayList<>();
-        try {
-            cursor = getContentResolver().query(uri, projection, selection, selectionArgs, null);
+        try (Cursor cursor = getContentResolver().query(uri, projection, selection, selectionArgs, null)) {
             while (cursor != null && cursor.moveToNext()) {
                 final int foundId = cursor.getInt(0);
                 final String foundName = cursor.getString(1);
@@ -126,12 +138,9 @@ public final class ContactsActivity extends Activity {
                         !StringUtils.equalsIgnoreCase(foundName, displayName) ? foundName + " (" + displayName + ")" : foundName));
             }
         } catch (final Exception e) {
-            Log.e(LOG_TAG, "ContactsActivity.getContactId", e);
-        } finally {
-            if (cursor != null) {
-                cursor.close(); // no Closable Cursor below sdk 16
-            }
+            Log.e(LOG_TAG, "ContactsActivity.getContacts", e);
         }
+        // no Closable Cursor below sdk 16
         return result;
     }
 
@@ -149,7 +158,7 @@ public final class ContactsActivity extends Activity {
             if (param == null) {
                 return StringUtils.EMPTY;
             }
-            return URLDecoder.decode(param, CharEncoding.UTF_8).trim();
+            return URLDecoder.decode(param, StandardCharsets.UTF_8.name()).trim();
         } catch (final UnsupportedEncodingException e) {
             Log.e(LOG_TAG, "ContactsActivity.getParameter", e);
         }
